--- a/nginx/resources/ingress.yaml
+++ b/nginx/resources/ingress.yaml
@@ -4,14 +4,18 @@ metadata:
   name: nginx-ingress
   namespace: app
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/session-cookie-name: "route"
+    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
+    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
+    nginx.ingress.kubernetes.io/session-cookie-path: "/v1/"
 spec:
   ingressClassName: nginx
   rules:
-  - host: test.tsi
+  - host: nginx.sdombi.hu 
     http:
       paths:
-      - path: /
+      - path: /v1
         pathType: Prefix
         backend:
           service:
