--- a/nginx/helmfile.yaml
+++ b/nginx/helmfile.yaml
@@ -1,8 +1,11 @@
+repositories:
+- name: ingress-nginx 
+  url: https://kubernetes.github.io/ingress-nginx
 releases:
   - name: nginx
-    chart: oci://ghcr.io/nginxinc/charts/nginx-ingress
-    version: 1.2.1
+    chart: ingress-nginx/ingress-nginx 
     namespace: ingress 
+    version: 4.10.1
     values:
       - values.yaml
 helmDefaults:
