--- a/nginx/resources/ingress.yaml
+++ b/nginx/resources/ingress.yaml
@@ -4,18 +4,17 @@ metadata:
   name: nginx-ingress
   namespace: app
   annotations:
-    nginx.ingress.kubernetes.io/affinity: "cookie"
-    nginx.ingress.kubernetes.io/session-cookie-name: "route"
+    nginx.ingress.kubernetes.io/affinity: cookie
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
-    nginx.ingress.kubernetes.io/session-cookie-path: "/v1/"
+    nginx.ingress.kubernetes.io/affinity-mode: persistent
 spec:
   ingressClassName: nginx
   rules:
   - host: nginx.sdombi.hu 
     http:
       paths:
-      - path: /v1
+      - path: /
         pathType: Prefix
         backend:
           service:
