--- a/nginx/values.yaml
+++ b/nginx/values.yaml
@@ -1,6 +1,7 @@
 controller:
   kind: DaemonSet 
   service:
+    externalTrafficPolicy: Local
     type: NodePort
     nodePorts: 
      http: 31709
