--- a/nginx/values.yaml
+++ b/nginx/values.yaml
@@ -1,8 +1,16 @@
 controller:
-  kind: DaemonSet 
+  #kind: DaemonSet
+  replicaCount: 6
   service:
-    externalTrafficPolicy: Local
+    #externalTrafficPolicy: Local
     type: NodePort
     nodePorts: 
      http: 31709
+  tolerations:
+    - key: "ingress"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
+  nodeSelector:
+    ingress: "true"
 
