--- a/nginx/resources/nginx.yaml
+++ b/nginx/resources/nginx.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: nginx-app
 spec:
-  replicas: 8
+  replicas: 4
   selector:
     matchLabels:
       app: nginx-app
@@ -25,6 +25,9 @@ spec:
       containers:
       - name: nginx
         image: nginx:latest
+        resources:
+          requests: 
+            memory: "2000Mi"
         ports:
         - containerPort: 80
         volumeMounts:
